--- a/less/style.less
+++ b/less/style.less
@@ -73,6 +73,51 @@ a{
     }
 }
 
+.btn {
+    background: linear-gradient(181.56deg, #0066FF -8.5%, #00369C 51.46%,
+     #0031C4 130.73%, #018FF6 130.74%);
+    border-radius: 18.5px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 15px;
+    text-align: center;
+    color: #FFFFFF;
+    outline: none;
+    border: none;
+
+    &--header-slider {
+        padding: 7.5px 40px;
+        background: linear-gradient(185.59deg, #FF0000 9.11%, #CE0000 98.12%);
+        border-radius: 18.5px;
+    }
+
+    &--posive {
+        background: linear-gradient(165.36deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        border-radius: 18.5px;
+       
+        color:  #0031C4;
+    }
+
+    &--university {
+        padding: 9px 20px;
+        font-size: 20px;
+        border: none;
+    }
+
+}
+
+.logo {
+    &--header {
+        flex-grow: 2;
+    }
+}
+
+#menu {
+    margin-left: 40px;
+}
 
 .diamond-decorate {
     position: absolute;
@@ -125,7 +170,7 @@ border-radius: 28px;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin-bottom: 38px;
+        // margin-bottom: 38px;
         font-size: 13px;
         white-space: nowrap;
         
@@ -139,6 +184,15 @@ border-radius: 28px;
         font-weight: bold;
         font-size: 20px;
     }
+}
+
+.connection-info__btn--red {
+    padding: 12px 26px;
+    margin-left: auto;
+    background: linear-gradient(186.68deg, #FF0000 9.11%, #CE0000 98.12%);
+    border-radius: 30px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .search {
@@ -191,6 +245,8 @@ border-radius: 28px;
 
     &__icon {
         margin-right: 10px;
+        background-color: #0066FF;
+        border-radius: 50%;
     }
 
     &__link {
@@ -272,6 +328,9 @@ display: none;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding-bottom: 6px;
+            border-bottom: 2px solid #0031C4;
+            margin-bottom: 10px;
             a {
                 color: #00369C 
             }
@@ -449,41 +508,7 @@ display: none;
 }
 
 
-.btn {
-    background: linear-gradient(181.56deg, #0066FF -8.5%, #00369C 51.46%,
-     #0031C4 130.73%, #018FF6 130.74%);
-    border-radius: 18.5px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 13px;
-    line-height: 15px;
-    text-align: center;
-    color: #FFFFFF;
-    outline: none;
-    border: none;
 
-    &--header-slider {
-        padding: 7.5px 40px;
-        background: linear-gradient(185.59deg, #FF0000 9.11%, #CE0000 98.12%);
-        border-radius: 18.5px;
-    }
-
-    &--posive {
-        background: linear-gradient(165.36deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-        border-radius: 18.5px;
-       
-        color:  #0031C4;
-    }
-
-    &--university {
-        padding: 9px 20px;
-        font-size: 20px;
-        border: none;
-    }
-
-}
 
 .opacity {
     opacity: 0.5;
@@ -1449,19 +1474,6 @@ display: none;
         display: flex;
         margin-right: 20px;
     }
-
-//    &__point {
-//        margin: 0 4px;
-//     width: 12px;
-//     height: 12px;
-//     border-radius: 50%;
-//     background: linear-gradient(137.45deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
-//     &--active {
-//         width: 14px;
-//         height: 14px;
-//         background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%)
-//     }
-//     }
 }
 
 
