--- a/less/style.less
+++ b/less/style.less
@@ -332,7 +332,7 @@ display: none;
             border-bottom: 2px solid #0031C4;
             margin-bottom: 10px;
             a {
-                color: #00369C 
+                color: #00369C;
             }
         }
     }
@@ -405,7 +405,7 @@ display: none;
 .header-slider {
     overflow: hidden;
     position: relative;
-    background-image: url(../img/photo/slider\ business.png);
+    background-image: url(../img/photo/headerSlider/medicine.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 40%;
