--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,9 @@
   .adaptive-header {
     display: block;
   }
+  .academic-header .arrow-decorate {
+    display: none;
+  }
   .academic-header__title {
     font-size: 84px;
   }
@@ -35,5 +38,43 @@
   .step-block__icon {
     width: 90px;
     height: 90px;
+  }
+}
+@media screen and (max-width: 997px) {
+  .benefits-items {
+    justify-content: center;
+    margin: 50px -20px 0;
+  }
+  .benefits-item {
+    margin: 20px;
+  }
+  .banner {
+    display: none;
+  }
+  .academic-header__title {
+    font-size: 67px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .benefits-items {
+    margin: 50px 0 0 0;
+    display: grid;
+    grid-template-areas: "one two" "three  four";
+    grid-gap: 30px;
+  }
+  .benefits-item {
+    margin: 0;
+  }
+  .benefits-item:nth-child(1) {
+    grid-area: one;
+  }
+  .benefits-item:nth-child(2) {
+    grid-area: two;
+  }
+  .benefits-item:nth-child(3) {
+    grid-area: three;
+  }
+  .benefits-item:nth-child(4) {
+    grid-area: four;
   }
 }
