--- a/css/style.css
+++ b/css/style.css
@@ -799,7 +799,7 @@ summary {
 .slider-item__photo {
   border-radius: 12px;
   display: block;
-  max-width: 100%;
+  width: 100%;
   object-fit: cover;
   border-bottom: 3px solid #B8B8B8;
 }
@@ -1269,6 +1269,9 @@ summary {
   position: relative;
   bottom: 40px;
   display: block;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
   border-radius: 28px;
   border-right: 4px solid #0031C4;
   border-bottom: 4px solid #0031C4;
