--- a/less/style.less
+++ b/less/style.less
@@ -964,7 +964,7 @@ display: none;
     &__photo {
         border-radius: 12px;
         display: block;
-        max-width: 100%;
+        width: 100%;
         object-fit: cover;
         border-bottom: 3px solid #B8B8B8;
         :hover .btn{
@@ -1575,6 +1575,9 @@ display: none;
         position: relative;
         bottom: 40px;
         display: block;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
         border-radius: 28px;
         border-right: 4px solid #0031C4;
         border-bottom: 4px solid #0031C4;
