--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 ul {
   list-style: none;
@@ -26,7 +27,8 @@ a {
 }
 .header {
   padding: 17px 0;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   background: linear-gradient(178.61deg, #f4f4f4 -0.37%, #b8b8b8 104.82%);
   z-index: 9999;
@@ -167,7 +169,6 @@ a {
 }
 .diamond-decorate--red {
   background: linear-gradient(206.74deg, #ff0000 9.11%, #ce0000 98.12%);
-  /* 1 */
 }
 .diamond-decorate .diamond-decorate-transparent {
   top: 90%;
@@ -178,6 +179,44 @@ a {
   height: 178.14px;
   border: 4px solid #BDBDBD;
   border-radius: 28px;
+}
+.rectangle-decorate-block {
+  position: absolute;
+  top: -287px;
+  z-index: 2;
+  right: 215px;
+}
+.rectangle-decorate-block__red {
+  overflow: hidden;
+  width: 255px;
+  height: 255px;
+  background: linear-gradient(206.74deg, #ff0000 9.11%, #ce0000 98.12%);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 28px;
+  transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+}
+.rectangle-decorate-block__transparent {
+  width: 217px;
+  height: 217px;
+  border-radius: 28px;
+  position: absolute;
+  top: 47%;
+  left: 270px;
+  z-index: 2;
+  transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0) translate(0, -50%);
+  border: 4px solid #BDBDBD;
+}
+.rectangle-decorate-block__arr-white {
+  position: absolute;
+  top: -83px;
+  left: -28px;
+  z-index: 3;
+}
+.rectangle-decorate-block__arr-transparent {
+  position: absolute;
+  top: -83px;
+  left: -5px;
+  z-index: 3;
 }
 .navigation {
   display: flex;
@@ -290,6 +329,7 @@ summary {
   width: 80%;
   max-width: 650px;
   left: 0;
+  z-index: 999;
   top: 0;
   font-family: Roboto;
   color: #FFFFFF;
@@ -740,12 +780,12 @@ summary {
 .universities .square-decorate {
   top: -65%;
   z-index: 2;
-  left: -18%;
+  left: -340px;
 }
 .universities .square-decorate--transparent {
   top: -65%;
   z-index: 2;
-  left: -13%;
+  left: -245px;
 }
 .universities__slider {
   display: flex;
