--- a/less/style.less
+++ b/less/style.less
@@ -7,6 +7,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden; // так делать нельзя но по другому никак не поставить декорирующие елементы
 }
 
 ul{
@@ -33,7 +34,8 @@ a{
 
 .header{
     padding: 17px 0;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     background: linear-gradient(178.61deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
     z-index: 9999;
@@ -198,23 +200,59 @@ a{
     }
     &--red {
         background: linear-gradient(206.74deg, #FF0000 9.11%, #CE0000 98.12%);
-        /* 1 */
-        
-
     }
-.diamond-decorate-transparent {
-    top: 90%;
-    left: 40%;
-    transform: translate(0, -50%);
+    .diamond-decorate-transparent {
+        top: 90%;
+        left: 40%;
+        transform: translate(0, -50%);
+        position: absolute;
+        width: 178.14px;
+        height: 178.14px;
+        border: 4px solid #BDBDBD;
+        border-radius: 28px;
+    }
+}
+.rectangle-decorate-block {
     position: absolute;
-    width: 178.14px;
-    height: 178.14px;
-    border: 4px solid #BDBDBD;
+    top: -287px;
+    z-index: 2;
+    right: 215px;
+    &__red {
+        overflow: hidden;
+        width: 255px;
+        height: 255px;
+        background: linear-gradient(206.74deg, #FF0000 9.11%, #CE0000 98.12%);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 28px;
+        transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+    }
+    &__transparent{
+        position: absolute;
+        width: 217px;
+        height: 217px;
+        border-radius: 28px;
+        position: absolute;
+        top: 47%;
+        left: 270px;
+        z-index: 2;
+        transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0) translate(0, -50%);
+        border: 4px solid #BDBDBD;
+    }
+    &__arr-white {
+        position: absolute;
+        top: -83px;
+        left: -28px;
+        z-index: 3;
+    }
+    &__arr-transparent {
+        position: absolute;
+        top: -83px;
+        left: -5px;
+        z-index: 3;
+    }
+    
+}
 
-border-radius: 28px;
-// transform: matrix(-0.71, -0.69, -0.72, 0.71, 0, 0);
-}
-}
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -342,6 +380,7 @@ summary {
    width: 80%;
    max-width: 650px;
    left: 0;
+   z-index: 999;
    top: 0;
    font-family: Roboto;
    color: #FFFFFF;
@@ -880,12 +919,12 @@ display: none;
     .square-decorate {
         top: -65%;
         z-index: 2;
-        left: -18%;
+        left: -340px;
     
         &--transparent {
             top: -65%;
             z-index: 2;
-            left: -13%;
+            left: -245px;
 
         }
         }
