--- a/css/media.css
+++ b/css/media.css
@@ -1,9 +1,43 @@
-@media screen and (max-width: 1200px) {
-  .header {
-    position: static;
+@media screen and (max-width: 1770px) {
+  .rectangle-decorate-block {
+    right: -88px;
   }
+}
+@media screen and (max-width: 1600px) {
+  .rectangle-decorate {
+    left: -45%;
+    top: -54%;
+  }
+  .universities .square-decorate {
+    top: -46%;
+    z-index: 2;
+    left: -434px;
+  }
+  .universities .square-decorate--transparent {
+    top: -46%;
+    z-index: 2;
+    left: -396px;
+  }
+  .header-assistent-slider {
+    left: 20%;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .header-assistent-slider {
+    left: 16%;
+  }
+}
+@media screen and (max-width: 1200px) {
   .header__nav {
     display: none;
+  }
+  .header-assistent-slider {
+    left: 16%;
+    max-width: 680px;
+  }
+  .rectangle-decorate {
+    left: -45%;
+    top: -54%;
   }
   .connection-info__item {
     display: none;
@@ -40,6 +74,11 @@
     height: 90px;
   }
 }
+@media screen and (max-width: 1100px) {
+  .header-assistent-slider {
+    left: 11%;
+  }
+}
 @media screen and (max-width: 997px) {
   .benefits-items {
     justify-content: center;
@@ -53,6 +92,10 @@
   }
   .academic-header__title {
     font-size: 67px;
+  }
+  .connection-info__btn {
+    padding: 12px 26px;
+    margin-left: auto;
   }
 }
 @media screen and (max-width: 800px) {
@@ -76,5 +119,30 @@
   }
   .benefits-item:nth-child(4) {
     grid-area: four;
+  }
+}
+@media screen and (max-width: 890px) {
+  .footer-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-form__input {
+    flex-basis: 100%;
+    width: 80%;
+    margin: 15px auto;
+  }
+  .footer-form__btn {
+    margin: 0 auto;
+  }
+  .footer-item--contact {
+    text-align: center;
+    margin: 0 auto;
+    width: 100vw;
+    flex-basis: 100%;
+    background: #001C53;
+  }
+  .admission-item-wrap {
+    flex-direction: column;
   }
 }
