--- a/css/style.css
+++ b/css/style.css
@@ -1358,7 +1358,7 @@ summary {
   height: 76.58px;
   border-radius: 30px;
   padding: 12px 90px 17px;
-  background: #004ecb;
+  background: #0052d5;
 }
 .telephones {
   top: -18px;
@@ -1385,11 +1385,15 @@ summary {
   z-index: 99;
 }
 .upBtn {
-  position: sticky;
-  bottom: 0;
+  position: fixed;
+  bottom: 20px;
   display: none;
+  margin: auto;
   justify-content: center;
   padding: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 999;
   cursor: pointer;
 }
 .upBtn .upArrow {
