--- a/less/media.less
+++ b/less/media.less
@@ -115,6 +115,9 @@
     .header-assistent-slider {
         left: 11%;
     }
+    .opacity {
+        opacity: 1;
+    }
 }
 
 @media screen and (max-width: 997px)  {
