--- a/less/style.less
+++ b/less/style.less
@@ -1681,7 +1681,8 @@ height: 76.58px;
 border-radius: 30px;
 padding: 12px 90px 17px;
 
-background: #004ecb; 
+background: #0052d5;
+// background: #3DADD0;
 
 }
 // .footer-decarate {
@@ -1745,11 +1746,15 @@ background: #004ecb;
 }
 
 .upBtn {
-    position: sticky;
-    bottom: 0;
+    position: fixed;
+    bottom: 20px;
     display: none;
+    margin: auto;
     justify-content: center;
     padding: 20px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 999;
     cursor: pointer;
   
     .upArrow {
