--- a/less/media.less
+++ b/less/media.less
@@ -2,7 +2,30 @@
     .rectangle-decorate-block {
         right: -88px;
     }
+    .diamond-decorate {
+        position: absolute;
+        width: 168px;
+        height:168px;
+        border-radius: 28px;
+        transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+        left: -137px;
+        top: -9px;
+    
+    
+        .diamond-decorate-transparent{
+        top: 74%;
+        left: 30%;
+        transform: translate(0, -50%);
+        position: absolute;
+        width: 145.77px;
+        height: 145.77px;
+        border: 4px solid #BDBDBD;
+        border-radius: 28px;
+    }
 }
+}
+
 
 @media screen and (max-width: 1600px) {
 
@@ -39,6 +62,9 @@
     .header-assistent-slider {
         left: 16%;
     }
+    .diamond-decorate {
+        left: -167px;
+    }
 }
 
 
@@ -65,6 +91,8 @@
     top: -54%;
     }
 
+
+   
     .connection-info__item {
         display: none;
     }
@@ -118,6 +146,12 @@
     .opacity {
         opacity: 1;
     }
+    
+    // .admission-form {
+    //     &--in-block {
+          
+    //     }
+    // }
 }
 
 @media screen and (max-width: 997px)  {
@@ -134,11 +168,53 @@
     }
 
     .banner {
-        display: none;
+        width: 70px;
+        height: 70px;
+        // display: none;
+        font-size: 13px;
+        &::before{
+            width: 57px;
+            height: 57px;
+        }
     }
     .academic-header {
         &__title {
-            font-size: 67px; 
+            font-size: 65px; 
+        }
+    }
+    
+    .connection-info__btn {
+        padding: 12px 26px;
+        margin-left: auto;
+    }
+}
+
+@media screen and (max-width: 997px)  {
+
+    .benefits-items {
+        justify-content: center;
+        margin: 50px -20px 0;
+      
+    }
+   
+    .benefits-item {
+        margin: 20px;
+    
+    }
+
+    .banner {
+        width: 70px;
+        height: 70px;
+        // display: none;
+        font-size: 13px;
+        &::before{
+            width: 57px;
+            height: 57px;
+        }
+    }
+    .academic-header {
+        &__title {
+            font-size: 65px; 
         }
     }
     
@@ -176,10 +252,18 @@
     .benefits-item:nth-child(4) {
         grid-area: four;
     }
+   
     
 }
 
 @media screen and (max-width: 890px) {
+
+    .academic-header__icon {
+        width: 60px;
+    }
+    .academic-header__title {
+        font-size: 55px;
+    }
     .footer-form {
         display: flex;
         flex-direction: column;
@@ -194,23 +278,69 @@
             margin: 0 auto;
         }
     }
+    .footer-items {
+        margin: 0 -20px 0 -20px;
+    }
 
-    .footer-item{
-        
-        &--contact {
-            text-align: center;
-            margin: 0 auto;
-            width: 100vw;
-            flex-basis: 100%;
-            background: #001C53;
+ 
+    .admission-item-wrap {
+        flex-direction: column;
+    }
+
+    // 
+    .feedback-item {
+        margin: 46px 50px;
+        padding: 23px 35px;
+        background: #FFFFFF;    
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+        border-radius: 14px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        color: #0031C4;
+    
+        &__inner {
+            display: grid; //
+            grid-template-areas: "img title"
+                                "img subtitle"
+                                "textItem textItem";
+            
         }
-
-}
-.admission-item-wrap {
-    // display: flex;
-    // flex-wrap: wrap;
-    flex-direction: column;
-}
+    
+        &__img {
+            grid-area: img;
+            position: relative;
+            bottom: 40px;
+            display: block;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
+            border-radius: 28px;
+            border-right: 4px solid #0031C4;
+            border-bottom: 4px solid #0031C4;
+            margin-right: 35px;
+        }
+        
+        &__title {  
+            grid-area: title;
+            font-size: 22px;
+         
+            margin-bottom: 15px;
+        }
+    
+        &__subtitle {
+            grid-area: subtitle;
+            font-size: 12px;
+            margin-bottom: 15px;
+        }
+    
+        &__text {
+            grid-area: textItem;
+            font-size: 14px;
+            color: #6F6F6F;
+        }
+    
+    }
 }
 
 // @media screen and (max-width: 1300px) {
