--- a/less/media.less
+++ b/less/media.less
@@ -104,6 +104,14 @@
         display: block;
     }
 
+    .connection-info__btn--sticky {
+        display: none;
+    }
+    .button--sticky {
+        display: none;
+    }
+    
+
     .academic-header {
       .arrow-decorate {
           display: none;
@@ -222,42 +230,45 @@
         padding: 12px 26px;
         margin-left: auto;
     }
+    .rectangle-decorate-block {
+        display: none;
+    }
+    .social-nav {
+        right: 0;
+    }
+    .header-assistent-slider {
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
 }
 
 
-@media screen and (max-width: 800px) {
-   
-    .benefits-items {
-        margin: 50px 0 0 0;
-        display: grid;//
-        grid-template-areas: "one two"
-                            "three  four";
-        grid-gap: 30px;
-      
-    }
 
-    .benefits-item {
-        margin: 0;
-    }
-
-    .benefits-item:nth-child(1) {
-        grid-area: one;
-    }
-    .benefits-item:nth-child(2) {
-        grid-area: two;
-    }
-    .benefits-item:nth-child(3) {
-        grid-area: three;
-    }
-    .benefits-item:nth-child(4) {
-        grid-area: four;
-    }
-   
-    
-}
 
 @media screen and (max-width: 890px) {
 
+    // .connection-info__item--tablet,
+    // .connection-info__btn--tablet{
+    //     display: none;
+    // }
+
+
+    // .social-nav {
+    //     display: none;
+    // }
+    .connection-info__btn {
+        padding: 9px 21px;
+       
+    }
+    .arrow-decorate{
+        display: none;
+    }
+    .navigation-item__link {
+        font-size: 10px;
+    }
+    .header-assistent-slider {
+        left: 54%;
+    }
     .academic-header__icon {
         width: 60px;
     }
@@ -343,6 +354,102 @@
     }
 }
 
+@media screen and (max-width: 800px) {
+
+    .header {
+        position: static;
+    }
+    .header-assistent-slider,
+    .connection-info__item--tablet,
+    .connection-info__btn--tablet,
+    .social-links-list {
+       display: none;
+   }
+
+    
+
+    .social-links-list--mobile{
+        display: flex;
+    }
+
+    .connection-info__btn--sticky {
+        display: block;
+    }
+
+    .connection-info__btn{
+       padding: 7px;
+       bottom: -31px;
+       right: 10px
+    }
+
+  
+   
+//    .header {
+//    }
+    .benefits-items {
+        margin: 50px 0 0 0;
+        display: grid;//
+        grid-template-areas: "one two"
+                            "three  four";
+        grid-gap: 30px;
+      
+    }
+
+    .benefits-item {
+        margin: 0;
+    }
+
+    .benefits-item:nth-child(1) {
+        grid-area: one;
+    }
+    .benefits-item:nth-child(2) {
+        grid-area: two;
+    }
+    .benefits-item:nth-child(3) {
+        grid-area: three;
+    }
+    .benefits-item:nth-child(4) {
+        grid-area: four;
+    }
+    
+}
+
+
+@media screen and (max-width: 500px){
+    .connection-info-tablet{
+        width: 100%;
+        justify-content: space-between;
+    }
+    .navigation-item--tablet {
+        margin-right: 1%;
+    }
+    .navigation-item__link {
+        font-size: 8px;
+    }
+    .navigation-item__icon {
+        margin-right: 5px;
+        width: 9px;
+        height: 9px;
+    }
+
+    .header-wrap {
+        display: flex;
+        justify-content: space-between;
+    }
+    .logo--header {
+        flex-grow: 0;
+        img {
+            height: 25px;
+            width: 113px;
+        }
+    }
+#menu {
+    margin-left: 0;
+}
+
+
+
+}
 // @media screen and (max-width: 1300px) {
 //     .arrow-decorate,
 //     .square-decorate {
