--- a/less/style.less
+++ b/less/style.less
@@ -83,6 +83,7 @@ a{
     display: none;
 }
 
+
 .hover-items {
     position: absolute;
     padding-top: 55px;
@@ -518,8 +519,9 @@ display: none;
     justify-content: flex-end;
     
     &--mobile {
-        margin-right: 23%;
-        margin-bottom: 43px;
+        display: none;
+        // margin-right: 23%;
+        // margin-bottom: 43px;
     }
 }
 
@@ -848,6 +850,9 @@ display: none;
     }
 
     
+}
+.button--sticky {
+    display: block;
 }
 
 .title-block {
