--- a/css/media.css
+++ b/css/media.css
@@ -257,10 +257,14 @@
   .header {
     position: static;
   }
+  .header-slider {
+    margin-top: 0;
+  }
   .header-assistent-slider,
   .connection-info__item--tablet,
   .connection-info__btn--tablet,
-  .social-links-list {
+  .social-links-list,
+  .social-nav {
     display: none;
   }
   .social-links-list--mobile {
@@ -297,6 +301,10 @@
   }
 }
 @media screen and (max-width: 500px) {
+  .container {
+    width: 100%;
+    padding: 0 20px;
+  }
   .connection-info-tablet {
     width: 100%;
     justify-content: space-between;
@@ -325,5 +333,48 @@
   }
   #menu {
     margin-left: 0;
+  }
+  .square-decorate {
+    display: none;
+  }
+  .header-slider__nav {
+    position: relative;
+    margin-top: 40px;
+    padding-bottom: 30px;
+    max-width: 100%;
+    margin: 0px -20px;
+  }
+  .header-slider__nav-list {
+    display: flex;
+    align-items: center;
+  }
+  .header-slider__nav-item {
+    min-width: 18.6%;
+    padding: 9px 13px;
+    background: linear-gradient(189.83deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
+    border-left: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .header-slider__nav-icon {
+    display: block;
+    margin-bottom: 8px;
+  }
+  .header-slider__nav-num {
+    padding: 0px;
+  }
+  .header-slider__buttons {
+    position: absolute;
+  }
+  .footer-item--contact {
+    background: #001C53;
+    margin: 20px 0 0 0;
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
   }
 }
