--- a/less/media.less
+++ b/less/media.less
@@ -110,6 +110,10 @@
     .button--sticky {
         display: none;
     }
+
+    .connection-info__item--menu{
+        display: flex;
+    }
     
 
     .academic-header {
@@ -356,11 +360,14 @@
 
 @media screen and (max-width: 800px) {
 
-    .header {
-        position: static;
-    }
-    .header-slider {
-        margin-top: 0;
+    // .header {
+    //     position: static;
+    // }
+    // .header-slider {
+    //     margin-top: 0;
+    // }
+    .header--sticky {
+        opacity: 1;
     }
     .header-assistent-slider,
     .connection-info__item--tablet,
@@ -373,7 +380,7 @@
     .social-links-list--mobile{
         display: flex;
     }
-
+    
     .connection-info__btn--sticky {
         display: block;
     }
