--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html,
 body {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  font-family: Roboto;
 }
 ul {
   list-style: none;
@@ -26,7 +27,7 @@ a {
   text-decoration: none;
 }
 .header {
-  padding: 17px 0;
+  padding: 5px 0;
   position: fixed;
   width: 100%;
   top: 0;
@@ -71,17 +72,17 @@ a {
 }
 .hover-items {
   position: absolute;
-  padding-top: 55px;
+  padding-top: 30px;
   display: none;
   transition: 0.3s;
 }
 .hover-items::before {
   content: "";
   position: absolute;
-  top: 15px;
+  top: -2px;
   left: 0;
-  border: 20px solid transparent;
-  border-bottom: 20px solid rgba(244, 244, 244, 0.9);
+  border: 17px solid transparent;
+  border-bottom: 15px solid rgba(244, 244, 244, 0.9);
   border-left: 20px solid rgba(244, 244, 244, 0.9);
 }
 .hover-items__list {
@@ -111,7 +112,7 @@ a {
   color: #555A61;
 }
 .subitem-link:hover {
-  color: #fff;
+  color: #00369C;
 }
 .subitem-icon {
   margin-right: 16px;
@@ -150,6 +151,12 @@ a {
   font-size: 20px;
   border: none;
 }
+.btn--header {
+  padding: 6px 37px;
+}
+.header .header-slider__content .btn--header {
+  padding: 6px 37px;
+}
 .logo--header {
   flex-grow: 2;
 }
@@ -180,6 +187,26 @@ a {
   height: 178.14px;
   border: 4px solid #BDBDBD;
   border-radius: 28px;
+}
+.connection-info__btn--red {
+  padding: 12px 26px;
+  margin-left: auto;
+  background: linear-gradient(186.68deg, #ff0000 9.11%, #ce0000 98.12%);
+  border-radius: 30px;
+  font-weight: bold;
+  font-size: 20px;
+}
+.connection-info__btn--tablet {
+  display: none;
+}
+.connection-info__btn--sticky {
+  display: none;
+  position: absolute;
+  z-index: 3;
+  bottom: -29px;
+  right: -29px;
+  padding: 7px 14px;
+  font-size: 15px;
 }
 .rectangle-decorate-block {
   position: absolute;
@@ -225,10 +252,12 @@ a {
   align-items: center;
 }
 .connection-info {
+  position: relative;
   padding-top: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 3;
 }
 .connection-info-tablet {
   display: flex;
@@ -247,31 +276,11 @@ a {
   display: block;
 }
 .connection-info .connection-info__btn {
-  padding: 12px 26px;
+  padding: 12px 37px;
   background: linear-gradient(186.68deg, #ff0000 9.11%, #ce0000 98.12%);
   border-radius: 30px;
   font-weight: bold;
   font-size: 20px;
-}
-.connection-info__btn--red {
-  padding: 12px 26px;
-  margin-left: auto;
-  background: linear-gradient(186.68deg, #ff0000 9.11%, #ce0000 98.12%);
-  border-radius: 30px;
-  font-weight: bold;
-  font-size: 20px;
-}
-.connection-info__btn--tablet {
-  display: none;
-}
-.connection-info__btn--sticky {
-  display: none;
-  position: absolute;
-  z-index: 3;
-  bottom: -29px;
-  right: -29px;
-  padding: 7px 14px;
-  font-size: 15px;
 }
 #menu {
   display: none;
@@ -332,6 +341,10 @@ a {
   letter-spacing: -0.02em;
   color: #FFFFFF;
   white-space: nowrap;
+}
+.navigation-item__link--rus-num {
+  letter-spacing: 0.01em;
+  margin-top: 2px;
 }
 details > summary::-webkit-details-marker {
   display: none;
@@ -455,7 +468,7 @@ summary {
   margin: 0px 5px;
 }
 .header-slider {
-  margin-top: 76px;
+  margin-top: 52px;
   overflow: hidden;
   position: relative;
   background-image: url(../img/photo/headerSlider/medicine.png);
@@ -477,8 +490,9 @@ summary {
   z-index: 1;
 }
 .header-slider .arrow-decorate--right {
-  left: 75.75%;
+  left: 82%;
   top: -138px;
+  z-index: -1;
 }
 .header-slider__content {
   position: relative;
@@ -493,7 +507,15 @@ summary {
   font-weight: 500;
   font-size: 85px;
   text-transform: uppercase;
-  margin-bottom: 19px;
+  margin-bottom: 0;
+}
+.header-slider__assistant-subtitle {
+  font-style: italic;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  text-transform: uppercase;
+  margin-bottom: 18px;
 }
 .header-slider__subtitle {
   font-style: italic;
@@ -615,7 +637,7 @@ summary {
 .social-nav {
   position: absolute;
   top: 50%;
-  right: -37px;
+  right: 45px;
   transform: translate(0, -50%);
 }
 .social-nav__main {
@@ -645,6 +667,7 @@ summary {
 }
 .assistent-slider-wrap {
   position: relative;
+  z-index: 29;
 }
 .header-assistent-slider {
   position: absolute;
